--- a/poster.tex
+++ b/poster.tex
@@ -57,6 +57,7 @@ We are one of the \textbf{largest research groups in the world} to focus on the 
 
 \staff{Benedikt Ahrens}{ahrens.jpg}{Higher categories, homotopy type theory, proof assistants}
 \staff{Miriam Backens}{backens}{Quantum computation, complexity theory, string diagrams}
+\staff{Rajesh Chitnis}{chitnis}{Graph algorithms and complexity, streaming algorithms, game theory}
 \staff{Anupam Das}{das}{Proof theory, logic, complexity theory}
 \staff{Martin Escardo}{escardo}{Homotopy type theory, proof assistants, topology}
 \staff{Dan Ghica}{ghica}{Programming languages, string diagrams, game semantics}
