--- a/poster.tex
+++ b/poster.tex
@@ -30,18 +30,20 @@ We are one of the \textbf{largest research groups in the world} to focus on the 
 \[
 \begin{tikzpicture}[scale=.9]
 \tikzset{sp/.style={align=center, ellipse callout, fill=white, draw, ultra thick, drop shadow, font=\large, inner sep=5pt, scale=.9}};
-\node [sp] at (0,0) {PROGRAMMING\\LANGUAGES};
-\node [sp, inner sep=8pt] at (3.5,-1) {CONCURRENCY};
-\node [sp] at (2,-2.5) {DENOTATIONAL\\SEMANTICS};
-\node [sp] at (-5,-2.5) {DOMAIN\\THEORY};
-\node [sp] at (10.9,-0.1) {COMPUTATIONAL\\COMPLEXITY};
-\node [sp] at (5.7,-2.4) {STRING\\DIAGRAMS};
-\node [sp] at (-5,-.3) {CATEGORY\\THEORY};
+\node [sp] at (1.1,0.2) {PROGRAMMING\\LANGUAGES};
+\node [sp, inner sep=8pt] at (2.5,-1.4) {CONCURRENCY};
+\node [sp, inner sep=7pt] at (-3.5,0.5) {ALGORITHMS};
+\node [sp] at (2.5,-3.0) {DENOTATIONAL\\SEMANTICS};
+\node [sp] at (-5,-2.8) {DOMAIN\\THEORY};
+\node [sp] at (10,0.1) {COMPUTATIONAL\\COMPLEXITY};
+\node [sp] at (6,-2.1) {STRING\\DIAGRAMS};
+\node [sp] at (-5,-.8) {CATEGORY\\THEORY};
 \node [sp] at (-1.5,-3.1) {HOMOTOPY\\TYPE THEORY};
-\node [sp] at (9.2,-3) {GAME\\SEMANTICS};
+\node [sp] at (8.4,-3) {GAME\\THEORY};
+\node [sp] at (11.4,-3) {GAME\\SEMANTICS};
 \node [sp] at (-2,-1.3) {QUANTUM\\COMPUTING};
 \node [sp] at (9.4,-1.4) {PROOF\\ASSISTANTS};
-\node [sp] at (6.5,-.2) {HIGHER\\CATEGORIES};
+\node [sp] at (5.7,0.2) {HIGHER\\CATEGORIES};
 \end{tikzpicture}
 \]
 
@@ -57,7 +59,7 @@ We are one of the \textbf{largest research groups in the world} to focus on the 
 
 \staff{Benedikt Ahrens}{ahrens.jpg}{Higher categories, homotopy type theory, proof assistants}
 \staff{Miriam Backens}{backens}{Quantum computation, complexity theory, string diagrams}
-\staff{Rajesh Chitnis}{chitnis}{Graph algorithms and complexity, streaming algorithms, game theory}
+\staff{Rajesh Chitnis}{chitnis}{Graph algorithms, streaming algorithms, game theory}
 \staff{Anupam Das}{das}{Proof theory, logic, complexity theory}
 \staff{Martin Escardo}{escardo}{Homotopy type theory, proof assistants, topology}
 \staff{Dan Ghica}{ghica}{Programming languages, string diagrams, game semantics}
@@ -75,7 +77,7 @@ Full bursaries are available for UK\ and EU\ students.
 
 We also support applications for outside scholarships.
 
-\vspace{5pt}
+\vspace{4pt}
 \textbf{www.cs.bham.ac.uk/research/theory}
 
 \end{document}
