--- a/poster.tex
+++ b/poster.tex
@@ -59,16 +59,15 @@ We are one of the \textbf{largest research groups in the world} to focus on the 
 \staff{Miriam Backens}{backens}{Quantum computation, complexity theory, string diagrams}
 \staff{Rajesh Chitnis}{chitnis}{Algorithms and complexity,\\game theory}
 \staff{Anupam Das}{das}{Proof theory, logic, complexity theory}
-\staff{Martin Escardo}{escardo}{Homotopy type theory, proof assistants, topology}
+\staff{Martin Escardo}{escardo}{Homotopy type theory, proof assistants, topology, domain theory, higher type computability}
 \staff{Dan Ghica}{ghica}{Programming languages, string diagrams, game semantics}
 \staff{Achim Jung}{jung}{Programming languages, domain theory, philosophy of computing}
-\staff{Nicolai Kraus}{kraus}{Higher categories, homotopy type theory, proof assistants}
 \staff{Paul Levy}{levy}{Programming languages, game semantics}
 \staff{Dave Parker}{parker}{Verification, model checking}
 \staff{Vincent Rahli}{rahli}{Programming languages,\\verification, proof assistants}
 \staff{Uday Reddy}{reddy}{Programming languages, logic, proof theory}
 \staff{Eike Ritter}{ritter}{Verification, model checking}
-\staff{Jamie Vicary}{vicary}{Quantum computing, higher\\category theory}
+
 
 \vspace{10pt}
 Full bursaries are available for UK\ and EU\ students.
